--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -1,11 +1,58 @@
+
 .ingredient{
     display: flex;
     list-style-type: none; 
-    border: 1px dashed red;
+    align-items: center;
+    justify-content: space-between;
+    width: 568px;
+    box-sizing: border-box;
 }
+
 .ingredients{
-    border: 1px dashed red;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: flex-end;
+    margin: 0;
+    padding: 0;
+    max-height: 464px;
+    overflow: auto;
+    max-width: 600px;
+}
+.order{
+    /* border: 1px dashed grey; */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    max-width: 600px;
+    margin: 0;
+    padding: 0;
+}
+.burgerConstructor{
+    box-sizing: border-box;
+    border: 1px dashed grey;
+    width: 600px;
+    height: 920px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.btn{
+
+color: hotpink;
+}
+
+.placeOrder{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    border: dashed rgb(34, 31, 31) 1px;
+}
+.placeOrder1{
+    display: inline-flex;
+    align-items: center;
+    justify-content: flex-end;
+    text-align: right;
 }
