--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,13 +1,13 @@
-  .logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
+
   .header {
+    position: relative;
     background-color: rgba(28, 28, 33, 1);
     box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
     min-height: 88px;
-    width: 100%;
+    width: 1920px;
+    padding: 0 320px;
+    box-sizing: border-box;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -27,7 +27,6 @@
     flex-direction: row;
     max-width: 383px;
     min-height: 56px;
-    margin-left: 320px;
     list-style-type: none; 
   }
 
@@ -51,9 +50,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-right: 320px;
     min-width: 207px;
     min-height: 56px;
   }
-
+.logo{
+  position: absolute;
+  left: 42%;
+  width: 290px;
+  height: 40px;
+}
  
