--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,27 +1,38 @@
 .menu{
-    box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 24px;
     grid-row-gap: 32px;
     width: 600px;
-    max-height: 750px;
-    overflow: auto;
 }
-.itemMenu{
+/* .itemMenu{
     position: relative;
     display: flex;
     flex-direction: column;
-    border: 1px dashed green;
-    width: 100%;
     height: 100%;
     min-height: 208px;
-}
+    align-items: center;
+} */
 .list{
+    height: 700px;
     margin: 0;
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    list-style-type: none; 
+    overflow: auto;
+}
+.listBlock{
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -29,15 +40,18 @@
     list-style-type: none; 
 }
 .ingredients{
-    border: grey 0.1px dashed;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: flex-start;
 }
-.price{
+/* .price{
     display: flex;
     align-items: center;
     margin: 0 auto;
 }
+.img{
+    width: 240px;
+    height: 120px;
+} */
 
