--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -4,14 +4,16 @@
     background-color: rgba(28, 28, 33, 1);
     box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
     min-height: 88px;
-    width: 1920px;
-    padding: 0 320px;
+    max-width: 1920px;
+    min-width: 1280px;
+    width: 100%;
+    /* padding: 0 320px calc(1920px + 100px); */
     box-sizing: border-box;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     color: white;
   }
   
@@ -23,6 +25,7 @@
    
   }
   .navigation{
+  
     display: flex;
     flex-direction: row;
     max-width: 383px;
@@ -39,6 +42,7 @@
   }
 
   .orderList{
+    /* margin-right: 145px; */
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -47,6 +51,7 @@
   }
   
   .profile{
+    /* margin-left: 145px; */
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -55,7 +60,7 @@
   }
 .logo{
   position: absolute;
-  left: 42%;
+  left: center;
   width: 290px;
   height: 40px;
 }
