fix: исправить ощибку при закрытии окна

--- a/src/components/order-details/order-details.module.css
+++ b/src/components/order-details/order-details.module.css
@@ -1,10 +1,10 @@
-.order{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: center;
+.order {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
 }
-.content{
-    color: #8585AD;
-    text-align: center;
+.content {
+  color: #8585ad;
+  text-align: center;
 }
