--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -1,36 +1,34 @@
-.order{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: center;
+.order {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
 }
-.property{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    color: #8585AD;
-    text-align: center;
-    width: 120px;
-    height: 56px;
+.property {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #8585ad;
+  text-align: center;
+  width: 120px;
+  height: 56px;
 }
-.nutritionalProperties{
-    display: flex;
-    justify-content: space-between;
+.nutritionalProperties {
+  display: flex;
+  justify-content: space-between;
 }
-.title{
-    line-height: 64px;
-    text-align: left;
-    width: 640px;
+.title {
+  line-height: 64px;
+  text-align: left;
+  width: 640px;
 }
-.content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* text-align: center; */
-    width: 520px;
-
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 520px;
 }
-.img{
-    width: 440px;
-    height: 240px;
+.img {
+  width: 440px;
+  height: 240px;
 }
