--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -7,8 +7,7 @@
   padding: 0;
   padding-right: 0;
   width: 720px;
-  /* height: 600px; */
-  background: #1C1C21;
+  background: #1c1c21;
   border: 1px solid rgba(76, 76, 255, 0.2);
   box-sizing: border-box;
   box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
@@ -16,9 +15,8 @@
     0px 0px 1px rgba(0, 0, 0, 0.04);
   border-radius: 40px;
 }
-.closeIcon{
+.closeIcon {
   position: absolute;
   top: 0;
   right: 0;
 }
-
