--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -6,3 +6,11 @@
   flex-direction: column;
   align-items: center;
 }
+.listsConstructor {
+
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px darkgoldenrod dashed;
+}
