--- a/src/components/lists/lists.module.css
+++ b/src/components/lists/lists.module.css
@@ -35,14 +35,23 @@
   padding: 0;
 }
 
-.lists {
+.emptyLists {
   font-size: 30px;
-  line-height: 4;
-  height: 300px;
+  line-height: 3;
+  height: 450px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 40px;
-  color: red;
-  background-color: rgb(51, 19, 19);
+  color: rgb(226, 216, 216);
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow: 0px 0px 200px red;
+
+}
+.lists {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-bottom: 40px;
 }
