--- a/src/pages/overlay.module.css
+++ b/src/pages/overlay.module.css
@@ -1,15 +1,15 @@
-.overlay {
+/* .overlay {
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     justify-content: center;
     padding-top: 288px;
-    /* align-items: center; */
+    align-items: center;
     width: 100%;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.6);
-    /* box-sizing: border-box; */
-    /* transition: all 0.6s ease-in-out; */
-  }
+    box-sizing: border-box;
+    transition: all 0.6s ease-in-out;
+  } */
