--- a/src/pages/style.module.css
+++ b/src/pages/style.module.css
@@ -1,49 +1,75 @@
 .modal {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between;  */
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    /* padding-right: 0; */
-    width: 480px;
-    height: 420px;
-    background: transparent;
-    /* border: 1px solid rgba(223, 230, 212, 0.2); */
-    /* box-sizing: border-box; */
-    /* box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
-      0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
-      0px 0px 1px rgba(0, 0, 0, 0.04); */
-    /* border-radius: 40px; */
-  }
-  .closeIcon {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-  .title {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 125%;
-    color: #F2F2F3;
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    margin: 0 0 24px 0;
-    padding: 0;
-  }
-  .field{
-    list-style-type: none;
-    display: block;
-  }
-  .link{
-    color: #4C4CFF;
-  }
-  .email{
-    width: 480px !important;
-  }
-  .list{
-    padding: 0;
-    margin: 0;
-  }
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 180px 0 0 0;
+  padding: 0;
+  width: 480px;
+  height: 420px;
+  background: transparent;
+}
+.profile {
+  position: relative;
+  display: flex;
+  margin: 120px 0 0 0;
+  padding: 0;
+  width: 1240px;
+  height: 420px;
+  background: transparent;
+}
+.closeIcon {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 125%;
+  color: #f2f2f3;
+  margin: 0 0 24px 0;
+  padding: 0;
+}
+.field {
+  display: block;
+  list-style-type: none;
+  display: block;
+  text-align: left;
+}
+.link {
+  color: #4c4cff;
+}
+.email {
+  width: 480px !important;
+}
+.list {
+  padding: 0;
+  margin: 0;
+}
+.menu{
+  padding-right: 60px;
+  margin: 0;
+}
+.field__profile {
+  composes: field;
+  width: 320px;
+  height: 64px;
+  font-family: "JetBrainsMono", Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 125%;
+}
+.field__profile_reshape {
+  composes: field__profile;
+  padding-top: 80px;
+  height: 48px;
+  font-family: "JetBrainsMono", Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+}
+.link_profile{
+  composes: link;
+  text-decoration: none;
+}
