--- a/src/pages/overlay.module.css
+++ b/src/pages/overlay.module.css
@@ -1,4 +1,4 @@
-/* .overlay {
+.overlay {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,7 +9,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(153, 19, 19, 0.6);
     box-sizing: border-box;
     transition: all 0.6s ease-in-out;
-  } */
+    font-size: 250px;
+  }
