--- a/src/pages/style.module.css
+++ b/src/pages/style.module.css
@@ -47,7 +47,7 @@
   padding: 0;
   margin: 0;
 }
-.menu{
+.menu {
   padding-right: 60px;
   margin: 0;
 }
@@ -69,7 +69,10 @@
   font-size: 16px;
   line-height: 150%;
 }
-.link_profile{
+.link_profile {
   composes: link;
   text-decoration: none;
+}
+.link_active {
+  color: red;
 }
