feat: добавить руты  forgot-password,reset-password,ingredients/:id, 404, order-feeed, order-history

--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,9 +1,9 @@
 .list {
   height: 700px;
   margin: 0;
-  padding-left: 0;
+  /* padding-left: 0;
   padding-right: 0;
-  padding-bottom: 0;
+  padding-bottom: 0; */
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
