--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -22,6 +22,14 @@
   text-decoration: underline;
   display: flex;
   flex-direction: row;
+  opacity: 0.6;
+}
+.link_active {
+  /* color: white; */
+  /* text-decoration: underline; */
+  /* display: flex; */
+  /* flex-direction: row; */
+  opacity: 1;
 }
 .navigation {
   display: flex;
