--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -4,10 +4,10 @@
   height: 920px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 .listsConstructor {
-
   height: 200px;
   display: flex;
   flex-direction: column;
