--- a/src/components/lists/lists.module.css
+++ b/src/components/lists/lists.module.css
@@ -7,17 +7,16 @@
   box-sizing: border-box;
 }
 
-.ingredients {
+/* .ingredients {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   margin: 0;
   padding: 0;
   max-height: 476px;
-  overflow: auto;
   max-width: 600px;
-}
-.ingredients::-webkit-scrollbar {
+} */
+/* .ingredients::-webkit-scrollbar {
   width: 8px;
 }
 .ingredients::-webkit-scrollbar-track {
@@ -25,7 +24,7 @@
 }
 .ingredients::-webkit-scrollbar-thumb {
   background: #8585ad;
-}
+} */
 .order {
   display: flex;
   flex-direction: column;
@@ -33,11 +32,22 @@
   max-width: 600px;
   margin: 0;
   padding: 0;
+  max-height: 676px;
+  overflow-x: auto;
+}
+.order::-webkit-scrollbar {
+  width: 8px;
+}
+.order::-webkit-scrollbar-track {
+  background: #2f2f37;
+}
+.order::-webkit-scrollbar-thumb {
+  background: #8585ad;
 }
 
 .emptyLists {
   font-size: 30px;
-  line-height: 3;
+  line-height: 1.4;
   height: 450px;
   display: flex;
   flex-direction: column;
@@ -50,8 +60,19 @@
 
 }
 .lists {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   margin-bottom: 40px;
+  /* overflow: auto; */
 }
+/* .lists::-webkit-scrollbar {
+  width: 8px;
+}
+.lists::-webkit-scrollbar-track {
+  background: #2f2f37;
+}
+.lists::-webkit-scrollbar-thumb {
+  background: #8585ad;
+} */
