--- a/src/pages/style.module.css
+++ b/src/pages/style.module.css
@@ -43,14 +43,14 @@
 .email {
   width: 480px !important;
 }
-.list {
+/* .list {
   padding: 0;
   margin: 0;
 }
 .menu {
   padding-right: 60px;
   margin: 0;
-}
+} */
 .field__profile {
   composes: field;
   width: 320px;
@@ -73,6 +73,12 @@
   composes: link;
   text-decoration: none;
 }
+.link_profile:hover {
+  background-color: transparent;
+  border-radius: 10%;
+  box-shadow: 0px 0px 30px red;
+}
+
 .link_active {
   color: red;
 }
