--- a/src/pages/order-id.module.css
+++ b/src/pages/order-id.module.css
@@ -5,31 +5,31 @@
     width: 640px;
     /* height: 620px; */
     margin: 122px 0 0;
-    background-color: #131316
+    /* background-color: #131316 */
 }
 .order__number{
     display: flex;
     justify-content: center;
     width: 100%;
-    background-color: rgb(44, 23, 23);
+    /* background-color: rgb(44, 23, 23); */
 }
 .order__name{
     display: flex;
     justify-content: left;
     width: 100%;
-    background-color: rgb(21, 37, 22);
+    /* background-color: rgb(21, 37, 22); */
 }
 .order__status{
     display: flex;
     justify-content: left;
     width: 100%;
-    background-color: rgb(20, 20, 35);
+    /* background-color: rgb(20, 20, 35); */
 }
 .order__specification{
     display: flex;
     justify-content: left;
     width: 100%;   
-    background-color: rgb(121, 102, 29);
+    /* background-color: rgb(121, 102, 29); */
 }
 .order__ingredients{
     display: flex;
@@ -37,7 +37,7 @@
     box-sizing: border-box;
     width: 100%;
     max-height: 312px;
-    background-color: rgb(94, 38, 38);
+    /* background-color: rgb(94, 38, 38); */
      overflow: auto;
 }
 .order__ingredients::-webkit-scrollbar {
@@ -81,6 +81,7 @@
     width: 100%;
     display: flex;
     align-self: flex-end;
+    justify-content: space-between;
     align-items: baseline;
     height: 24px;
 
@@ -93,56 +94,3 @@
     width: fit-content;
     background-color: rgb(59, 18, 52);
 }
-
-
-    /* <section className={styles.order__container}>
-    <p className={styles.order__number + " text text_type_digits-medium"}>
-      #034999
-    </p>
-    <h2
-      className={styles.order__name + " mt-10 mb5 text text_type_main-medium"}
-    >
-      Black Hole Singularity острый бургер
-    </h2>
-    <p className={styles.order__status + " text text_type_main-medium mb-6"}>
-      В работе :
-    </p>
-    <h4
-      className={
-        styles.order__specification + " mt-10 mb5 text text_type_main-medium"
-      }
-    >
-      Состав :
-    </h4> */
-    /* <div className={styles.order__ingredients}>
-      <div className={styles.order__ingredient}>
-        <div className={styles.order__image}></div>
-        <p
-          className={
-            styles.order__ingredient_name + " text text_type_main-medium mb-6"
-          }
-        >
-          Флюоресцентная булка R2-D3
-        </p>
-        <p
-          className={
-            styles.order__ingredient_sum + " text text_type_main-medium mb-6"
-          }
-        >
-         2 x 20
-        </p>
-      </div>
-    </div> */
-    /* <div className={styles.order__total}>
-      <p className={styles.order__date + " text text_type_main-medium mb-6"}>
-      Вчера, 13:50 i-GMT+3
-      </p>
-      <p
-        className={
-          styles.order__total_sum + " text text_type_main-medium mb-6"
-        }
-      >
-        510 руб
-      </p>
-    </div>
-  </section> */
