feat: откорректировать работу модального окна импуты завернуть в form регистрацию пользователя проверять по значению успешной регистрации в state использовать средства роутинга для отображения модального окна

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -2,8 +2,8 @@
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin: 0;
+  /* align-items: center; */
+  margin: 0 0 120px 0;
   padding: 0;
   padding-right: 0;
   width: 720px;
