--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -4,15 +4,14 @@
   justify-content: center;
   /* align-items: center; */
   margin: 0 0 120px 0;
-  padding: 0;
-  padding-right: 0;
+  padding: 10px 0 10px 0;
   width: 720px;
   background: #1c1c21;
   border: 1px solid rgba(76, 76, 255, 0.2);
-  box-sizing: border-box;
+  box-sizing: content-box;
   box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04),
     0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04),
-    0px 0px 1px rgba(0, 0, 0, 0.04);
+    0px 0px 1px rgba(83, 71, 71, 0.04);
   border-radius: 40px;
 }
 .closeIcon {
