--- a/src/pages/order-id.module.css
+++ b/src/pages/order-id.module.css
@@ -1,10 +1,10 @@
 .order__container{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     width: 640px;
     /* height: 620px; */
-    margin: 122px 0 0;
+    margin: 0;
     /* background-color: #131316 */
 }
 .order__number{
@@ -54,7 +54,7 @@
 .order__ingredient{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     width: 100%;
 }
 .order__image__box{
@@ -66,13 +66,13 @@
     background-color: rgb(58, 101, 75);
 }
 .order__ingredient_name{
-    margin: 0;
+    margin: 0 auto 0 0;
     display: flex;
     align-items: baseline;
     height: 24px;
 }
 .order__ingredient_sum{
-    margin: 0;
+    margin: 0 12px 0 0;
     display: flex;
     align-items: baseline;
     height: 24px;
@@ -80,15 +80,13 @@
 .order__total{
     width: 100%;
     display: flex;
-    align-self: flex-end;
-    justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     height: 24px;
 
 }
 .order__date{
+    margin: 0 auto 0 0;
     width: auto;
-    background-color: rgb(28, 27, 103);
 }
 .order__total_sum{
     width: fit-content;
@@ -97,7 +95,6 @@
 .order__image{
     object-fit: cover;
     box-sizing: border-box;
-    /* min-width: 64px; */
     display: flex;
     justify-content: center;
     align-items: center;
