--- a/src/pages/style.module.css
+++ b/src/pages/style.module.css
@@ -15,6 +15,8 @@
   display: flex;
   margin: 0;
   padding: 0;
+  /* justify-content: center; */
+  /* align-items: center; */
   width: 1240px;
   /* height: 420px; */
   background: transparent;
