--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -3,8 +3,9 @@
   display: flex;
   justify-content: center;
   margin: 0 0 120px 0;
-  padding: 10px 0 10px 0;
+  padding: 10px 0 20px 0;
   width: 720px;
+  height: auto;
   background: #1c1c21;
   border: 1px solid rgba(76, 76, 255, 0.2);
   box-sizing: content-box;
