feat: типизировать оставшиеся компонеты

--- a/src/components/order-details/order-details.module.css
+++ b/src/components/order-details/order-details.module.css
@@ -31,3 +31,9 @@
   font-size: 144px;
   line-height: 120px;
 }
+.load {
+  font-family: "Iceland", Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 44px;
+  line-height: 120px;
+}
